# mddb

./: .rustfmt.toml  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
scripts/: pretty-test
src/: error.rs  id.rs  lib.rs  log.rs  node.rs  parser.rs  vault.rs
src/_docs/: data.rs  layout.rs
src/parser/: cb.rs  file.rs  fm.rs  h.rs
src/parser/markdown/: ObsidianLink.rs
test/data/: task.2023.11.02.create-a-keybinding-for-create-journal-note.md  task.2023.11.09.create-a-function-to-add-an-area-label-to-the-current-project.md  task.2023.11.09.develop-a-process-to-build-maps-of-content.md
test/data/get_root_id_with_root_file/: root.md
test/data/new_vault_get_files/: task.2023.11.09.create-a-function-to-add-an-area-label-to-the-current-project.md
test/data/vault_has_root_file/: root.md
