[package]
name = "mddb"
version = "0.1.0"
authors = ["Timothy Aldrich <timothy.r.aldrich@gmail.com"]
description = "Use a collection of markdown files as a database"
license = "MIT"
homepage = "https://github.com/aldrichtr/mddb"
repository = "https://github.com/aldrichtr/mddb"
edition = "2021"
categories = ["database", "text-processing", "filesystem"]
keywords = ["markdown", "database"]
readme = "README.md"


[dependencies]
# file system
glob = "0.3.1"

# serialization
serde = "1.0.204"
serde_derive = "1.0.204"


# markdown processing
markdown-it = "0.6.1"
markdown-it-tasklist = "0.2.0"
markdown-it-front-matter = "0.3.0"
serde_yml = "0.0.11"

# Abstract Syntax Tree
tree-ds = { version = "0.1"}

# Node Ids
nanoid = "0.4.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
regex = "1.10.5"
thiserror = "1.0.63"
pathdiff = "0.2.1"
log = { version = "0.4.22", features = ["kv", "max_level_trace", "release_max_level_info", "std"] }
normalize-path = "0.2.1"
shellexpand = "3.1.0"

[dev-dependencies]
k9 = "0.12.0"
nextest = "0.0.0"
stdext = "0.3.3"
test-group = "1.0.1"
test-log = "0.2.16"
